# LLM-Benchmark

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish-container.yml
docker/: entrypoint.sh
docs/: community-end-state.md
fixtures/config/: config.example.yaml  config.unraid.example.yaml
fixtures/live_compare/: presets.yaml
fixtures/suites/: paperless_kiplus_suite.yaml  quick_compare.yaml  secondbrain_suite.yaml  voice_gateway_suite.yaml
fixtures/tests/: 001_chat_cap_theorem.yaml  002_summarization_release_notes.yaml  003_extraction_incident_json.yaml  004_classification_ticket.yaml  005_instruction_following_triplet.yaml  006_structured_output_asset.json  007_function_calling_weather.yaml  008_coding_bug_review.yaml  009_robustness_prompt_injection.yaml  010_long_context_policy_audit.yaml  011_long_context_multi_doc_summary.yaml  101_quick_chat_triage.yaml  102_quick_summary_release.yaml  103_quick_json_extraction.yaml  104_quick_instruction_format.yaml  105_quick_technical_analysis.yaml
fixtures/tests/domain/paperless_kiplus/: 401_pk_document_classification.yaml  402_pk_strict_json_schema.yaml  403_pk_yaml_generation.yaml  404_pk_precheck_decision.yaml  405_pk_ai_note.yaml  406_pk_robust_defaults.yaml  407_pk_tax_enrichment.yaml  408_pk_review_flags.yaml  409_pk_tagging_recommendations.yaml
fixtures/tests/domain/paperless_kiplus/fixtures/: document_classification_schema.json  pk_ai_note.txt  pk_document_classification.txt  pk_precheck_decision.txt  pk_review_flags.txt  pk_robust_defaults.txt  pk_strict_json_schema.txt  pk_tagging_recommendations.txt  pk_tax_enrichment.txt  pk_yaml_generation.txt  precheck_decision_schema.json  review_flags_schema.json  runtime_defaults_schema.json  tagging_schema.json  tax_enrichment_schema.json  yaml_runtime_config_schema.json
fixtures/tests/domain/secondbrain/: 201_sb_rag_context_fidelity.yaml  202_sb_source_oriented_answer.yaml  203_sb_structured_query.yaml  204_sb_document_summary.yaml  205_sb_fact_extraction.yaml  206_sb_prompt_injection_defense.yaml  207_sb_homeassistant_context.yaml  208_sb_whatsapp_context.yaml  209_sb_finance_context.yaml
fixtures/tests/domain/secondbrain/fixtures/: fact_extraction_schema.json  finance_extract_schema.json  sb_document_summary.txt  sb_fact_extraction.txt  sb_finance_context.txt  (+10 more)
fixtures/tests/domain/voice_gateway/: 301_vg_routing_matrix.yaml  302_vg_prefix_priority.yaml  303_vg_alexa_short_answer.yaml  304_vg_tool_backend_selection.yaml  305_vg_ambiguity_handling.yaml  306_vg_homeassistant_action_safety.yaml  307_vg_docker_ops_speech.yaml  308_vg_troubleshooting_short_answer.yaml  309_vg_latest_mail_shortcut.yaml
src/llm_benchmark/: __init__.py  __main__.py  cli.py  logging_utils.py  utils.py
src/llm_benchmark/clients/: __init__.py  openai_compatible.py
src/llm_benchmark/config/: __init__.py  loader.py  models.py
src/llm_benchmark/dashboard/: __init__.py  app.py  live_compare_manager.py  run_manager.py  service.py
src/llm_benchmark/dashboard/static/: dashboard.css
src/llm_benchmark/dashboard/templates/: dashboard.html  live_compare.html
src/llm_benchmark/domain/: __init__.py  live_compare.py  result.py  test_case.py
src/llm_benchmark/reporting/: __init__.py  analysis_input_schema.json  builder.py  exporters.py  final_report_schema.json
src/llm_benchmark/runner/: __init__.py  execution.py  live_compare.py  orchestrator.py  scoring.py
src/llm_benchmark/templates/: report.html.j2  report.md.j2
src/llm_benchmark/validation/: __init__.py  service.py
tests/: test_client_and_orchestrator.py  test_dashboard_run_manager.py  test_dashboard_service.py  test_live_compare_manager.py  test_live_compare_runner.py  test_loader_and_validation.py  test_scoring_and_reporting.py
unraid/: llm-benchmark.xml
(+13 files in other folders)
